--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && cp -r manifest.json main.html background.js icon.png popup.html popup.js scripts styles resources  dist/",
+    "dev-page": "vite",
+    "build" : "cp -r manifest.json background.js icon.png scripts styles resources  build/ && vite build",
+    "dev": "cp -r manifest.json background.js icon.png scripts styles resources  build/ && vite build --watch",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
