--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "scripts/background.js"
   },
   "omnibox": {
     "keyword": "q"
