[Clean] removed resolve dependency

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "antd": "^5.10.2",
     "idb": "^7.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "resolve": "^2.0.0-next.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.248",
