--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^5.2.6",
     "@fontsource/poppins": "^5.0.8",
     "antd": "^5.10.2",
+    "crypto-random-string": "^5.0.0",
     "idb": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
