--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/poppins": "^5.0.8",
     "@n1md7/indexeddb-promise": "^7.1.0",
     "antd": "^5.10.2",
+    "bootstrap-icons": "^1.11.1",
     "crypto-random-string": "^5.0.0",
     "idb": "^7.1.1",
     "react": "^18.2.0",
