--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^5.2.6",
     "@fontsource/poppins": "^5.0.8",
     "@n1md7/indexeddb-promise": "^7.1.0",
+    "@types/styled-components": "^5.1.32",
     "antd": "^5.10.2",
     "bootstrap-icons": "^1.11.1",
     "crypto-random-string": "^5.0.0",
@@ -25,15 +26,17 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.248",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "hot-reload-extension-vite": "^1.0.10",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "vite": "^4.4.5",
     "vite-plugin-static-copy": "^0.17.0"
   }
