--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "slashspacego",
+  "name": "slash_space_go_ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev-page": "vite",
-    "build": "vite build",
-    "dev": "NODE_ENV=development vite build --watch",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "watch": "chokidar \"**/*.**\" -c \"npm run build\" -i \"dist/**\" -i \"**/*.mjs\""
   },
   "dependencies": {
     "@ant-design/happy-work-theme": "^1.0.0",
     "@ant-design/icons": "^5.2.6",
     "@fontsource/poppins": "^5.0.8",
-    "@n1md7/indexeddb-promise": "^7.1.0",
-    "@types/styled-components": "^5.1.32",
     "antd": "^5.10.2",
     "bootstrap-icons": "^1.11.1",
     "crypto-random-string": "^5.0.0",
-    "idb": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
     "@types/chrome": "^0.0.248",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "hot-reload-extension-vite": "^1.0.10",
+    "rollup-plugin-babel": "^4.4.0",
     "typescript": "^5.3.2",
-    "vite": "^4.4.5",
-    "vite-plugin-static-copy": "^0.17.0"
+    "vite": "^5.0.0",
+    "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-static-copy": "^0.17.0",
+    "@crxjs/vite-plugin": "^1.0.14",
+    "@types/node": "^18.8.3",
+    "chokidar-cli": "^3.0.0",
+    "vite-plugin-svgr": "^2.2.1"
   }
 }
