--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "slash_space_go_ts",
+  "name": "slash_space_go",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore --fix src",
-    "watch": "chokidar \"**/*.**\" -c \"npm run build\" -i \"build/**\" -i \"**/*.mjs\""
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/happy-work-theme": "^1.0.0",
@@ -22,26 +21,26 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-env": "^7.23.5",
-    "@types/chrome": "^0.0.248",
+    "@crxjs/vite-plugin": "^2.0.0-beta.21",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "typescript": "^5.2.2",
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@types/chrome": "^0.0.248",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "^3.0.0",
     "hot-reload-extension-vite": "^1.0.10",
     "rollup-plugin-babel": "^4.4.0",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.0",
+    "vite": "^5.0.4",
     "vite-plugin-checker": "^0.6.2",
     "vite-plugin-static-copy": "^0.17.0",
-    "@crxjs/vite-plugin": "^1.0.14",
     "@types/node": "^18.8.3",
     "chokidar-cli": "^3.0.0",
     "vite-plugin-svgr": "^2.2.1"
