--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "scripts/background.js",
+    "service_worker": "src/chrome/background.ts",
     "type": "module"
   },
   "omnibox": {
@@ -18,7 +18,9 @@
     {
       "all_frames": true,
       "matches": ["<all_urls>"],
-      "js": ["scripts/SlashSpaceGoHelper.js"],
+      "js": [
+        "src/chrome/content_script.ts"
+      ],
       "run_at": "document_idle"
     }
   ]
