--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
     "chokidar-cli": "^3.0.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.32.2",
@@ -41,7 +42,9 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-unused-imports": "^3.0.0",
     "hot-reload-extension-vite": "^1.0.10",
+    "postcss": "^8.4.32",
     "rollup-plugin-babel": "^4.4.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.4",
     "vite-plugin-checker": "^0.6.2"
