--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,11 @@
       ],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "icons": {
+    "16": "icons/16_16.png",
+    "32": "icons/32_32.png",
+    "48": "icons/48_48.png",
+    "128": "icons/128_128.png"
+  }
 }
