--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "hot-reload-extension-vite": "^1.0.10",
     "postcss": "^8.4.32",
-    "rollup-plugin-babel": "^4.4.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.4",
