--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-faq-component": "^1.3.4",
     "react-markdown": "^9.0.1",
+    "tslog": "^4.9.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
