--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,58 +4,58 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: [ 'main' ]
+    pull_request:
+        branches: [ 'main' ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        strategy:
+            matrix:
+                node-version: [ 20.x ]
+                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
-    - run: npm run build --if-present
-    # - run: npm test
-    - run: ls -l
+        steps:
+            - uses: actions/checkout@v4
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: 'npm'
+            - run: npm i
+            - run: npm run build --if-present
+            # - run: npm test
+            - run: ls -l
 
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - run: ls -l
-    # - name: Create Draft Release
-    #   id: create_release
-    #   uses: actions/create-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     tag_name: <tofill>
-    #     release_name: <tofill>
-    #     draft: true
-    #     prerelease: false
+    release:
+        runs-on: ubuntu-latest
+        steps:
+            - run: ls -l
+        # - name: Create Draft Release
+        #   id: create_release
+        #   uses: actions/create-release@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     tag_name: <tofill>
+        #     release_name: <tofill>
+        #     draft: true
+        #     prerelease: false
 
-    # - uses: actions/upload-release-asset@v1.0.1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-    #     asset_path: ./my-artifact.zip
-    #     asset_name: my-artifact.zip
-    #     asset_content_type: application/zip
+        # - uses: actions/upload-release-asset@v1.0.1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+        #     asset_path: ./my-artifact.zip
+        #     asset_name: my-artifact.zip
+        #     asset_content_type: application/zip
 
-    # - uses: eregon/publish-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     release_id: ${{ steps.create_release.outputs.id }}
+        # - uses: eregon/publish-release@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     release_id: ${{ steps.create_release.outputs.id }}
