--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "slash_space_go",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@ant-design/happy-work-theme": "^1.0.0",
-    "@ant-design/icons": "^5.2.6",
-    "@fontsource/poppins": "^5.0.8",
-    "@fontsource/space-mono": "^5.0.17",
-    "antd": "^5.13.2",
-    "bootstrap-icons": "^1.11.3",
-    "crypto-random-string": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-faq-component": "^1.3.4",
-    "react-markdown": "^9.0.1",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-env": "^7.23.5",
-    "@crxjs/vite-plugin": "^2.0.0-beta.23",
-    "@types/chrome": "^0.0.248",
-    "@types/node": "^18.8.3",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "chokidar-cli": "^3.0.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "hot-reload-extension-vite": "^1.0.10",
-    "postcss": "^8.4.32",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.4",
-    "vite-plugin-checker": "^0.6.2"
-  }
+    "name": "slash_space_go",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "prettier --check . && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@ant-design/happy-work-theme": "^1.0.0",
+        "@ant-design/icons": "^5.2.6",
+        "@fontsource/poppins": "^5.0.8",
+        "@fontsource/space-mono": "^5.0.17",
+        "antd": "^5.13.2",
+        "bootstrap-icons": "^1.11.3",
+        "crypto-random-string": "^5.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-faq-component": "^1.3.4",
+        "react-markdown": "^9.0.1",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.23.5",
+        "@babel/preset-env": "^7.23.5",
+        "@crxjs/vite-plugin": "^2.0.0-beta.23",
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@types/chrome": "^0.0.248",
+        "@types/node": "^18.8.3",
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.16",
+        "chokidar-cli": "^3.0.0",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "eslint-plugin-unused-imports": "^3.0.0",
+        "hot-reload-extension-vite": "^1.0.10",
+        "postcss": "^8.4.32",
+        "prettier": "3.3.3",
+        "tailwindcss": "^3.3.5",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.4",
+        "vite-plugin-checker": "^0.6.2"
+    }
 }
